Add PostHog analytics with session recording

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.554.0",
     "next": "^16.0.7",
+    "posthog-js": "^1.304.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "remark": "^15.0.1",
